Adding Scheduler manager (SCM) driver at Service layer

--- a/Main_ECU/.settings/org.eclipse.core.resources.prefs
+++ b/Main_ECU/.settings/org.eclipse.core.resources.prefs
@@ -47,6 +47,8 @@ encoding//Debug/1-Source/2\ HAL/01\ HC-SR04/Cfg/subdir_rules.mk=UTF-8
 encoding//Debug/1-Source/2\ HAL/01\ HC-SR04/Cfg/subdir_vars.mk=UTF-8
 encoding//Debug/1-Source/2\ HAL/01\ HC-SR04/src/subdir_rules.mk=UTF-8
 encoding//Debug/1-Source/2\ HAL/01\ HC-SR04/src/subdir_vars.mk=UTF-8
+encoding//Debug/1-Source/3\ Services/0\ SCM/Src/subdir_rules.mk=UTF-8
+encoding//Debug/1-Source/3\ Services/0\ SCM/Src/subdir_vars.mk=UTF-8
 encoding//Debug/1-Source/4\ Application/subdir_rules.mk=UTF-8
 encoding//Debug/1-Source/4\ Application/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
