--- a/Main_ECU/.cproject
+++ b/Main_ECU/.cproject
@@ -48,6 +48,8 @@
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_20.2.compilerID.DIAG_WRAP.459386216" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_20.2.compilerID.DIAG_WRAP" useByScannerDiscovery="false" value="com.ti.ccstudio.buildDefinitions.TMS470_20.2.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.TMS470_20.2.compilerID.INCLUDE_PATH.859209123" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_20.2.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="${PROJECT_ROOT}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/1-Source/3 Services/0 SCM/Inc}"/>
+									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/1-Source/3 Services/0 SCM/Cfg}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/1-Source/2 HAL/01 HC-SR04/Cfg}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/1-Source/2 HAL/01 HC-SR04/inc}"/>
 									<listOptionValue builtIn="false" value="${workspace_loc:/${ProjName}/1-Source/1 MCAL/10 I2C/cfg}"/>
